# requests-session-saver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
requests_session_saver/: __init__.py  session_saver.py
requests_session_saver/exporters/: __init__.py  exporter.py  json.py  raw.py
requests_session_saver/formatters/: __init__.py  formatter.py  json.py  raw.py
